fix: ensure to don’t have a port already in use
The previous way take a time between the moment where we get a free port
and the moment where we use it.

To avoid case where the port is used between this 2 moments, we let
vertx choose the port.

APIM-9724